1.4.0 (2017/08/16)
==================

 - Accept app name *or* API URL in initialize()
 - Denote optional arguments in stubs
 - Expose stubs' docs and signatures on client, so e.g. tab completion and help within IPython works


1.3.1 (2017/07/26)
==================

 - Python 3.5 support (str.format used, instead of f-strings)
 - Update stub generator to handle Infusionsoft's new in-browser API call explorer



1.3.0 (2017/04/11)
==================

 - Expose real `infusionsoft` module, for easy mocking during testing.



1.2.0 (2017/04/11)
==================

 - Include Django integration
 - Switch to Werkzeug LocalProxy class (far simpler to understand)



1.1.0 (2017/04/11)
==================

 - Added `consume()` function to retrieve all rows of a paginated query.