@@ -57,17 +57,19 @@ class RetryServerProxy(ServerProxy, object):
 
 class InfusionsoftServerProxy(RetryServerProxy, DefaultArgServerProxy):
     def __init__(self, *args, **kwargs):
+        # TODO: setdefault use_builtin_types=True in next major release
         kwargs.setdefault('encoding', 'utf-8')
         kwargs.setdefault('allow_none', False)
         kwargs.setdefault('use_datetime', True)
         super().__init__(*args, **kwargs)
 
 
-def get_client(api_url_or_app_name: str, api_key: str, client_cls=InfusionsoftServerProxy):
+def get_client(api_url_or_app_name: str, api_key: str,
+               client_cls=InfusionsoftServerProxy, **options):
     if api_url_or_app_name.startswith('https://'):
         api_url = api_url_or_app_name
     else:
         url_fmt = 'https://{app_name}.infusionsoft.com/api/xmlrpc'
         api_url = url_fmt.format(app_name=api_url_or_app_name)
 
-    return client_cls(api_url, default_args=[api_key])
+    return client_cls(api_url, default_args=[api_key], **options)
